configure data location
